--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,10 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Sergio Coitiño</title>
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css">
+
+
   </head>
   <body>
     <div id="root"></div>
