--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,8 @@
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css">
 
+    <script src="https://kit.fontawesome.com/e499239b02.js" crossorigin="anonymous"></script>
+
   </head>
   <body>
     <div id="root"></div>
